# controllers/users.go
@@ -128,7 +128,7 @@ func (uc *UserController) GetUser(ctx *gin.Context) {
 		ctx.Error(err)
 		return
 	}
-	user.Groups = []string{}
+
 	ctx.JSON(http.StatusOK, user)
 }
 
@@ -144,7 +144,7 @@ func (uc *UserController) GetUser(ctx *gin.Context) {
 //	@Failure		400	{object}	helpers.HTTPError
 //	@Failure		404	{object}	helpers.HTTPError
 //	@Failure		500	{object}	helpers.HTTPError
-//	@Router			/users/{id} [get]
+//	@Router			/users/{id}/groups [get]
 //	@Security		Bearer
 func (uc *UserController) GetUserGroups(ctx *gin.Context) {
 	userID := ctx.Param("id")
