# docs/swagger.yaml
@@ -89,23 +89,42 @@ definitions:
         type: string
       provider:
         type: string
+      role_ids:
+        items:
+          type: string
+        type: array
+        uniqueItems: true
       updated_at:
         type: string
-      users:
+      user_ids:
         items:
           type: string
         type: array
     required:
     - name
     - provider
+    - role_ids
+    type: object
+  models.GroupRole:
+    properties:
+      access:
+        type: string
+      name:
+        type: string
+      resource:
+        type: string
+      resource_names:
+        items:
+          type: string
+        type: array
     type: object
   models.GroupUser:
     properties:
       id:
         type: string
-      name:
-        type: string
       provider:
+        type: string
+      username:
         type: string
     type: object
   models.Job:
@@ -162,7 +181,7 @@ definitions:
         type: string
       resource:
         type: string
-      resource_ids:
+      resource_names:
         items:
           type: string
         type: array
@@ -173,24 +192,16 @@ definitions:
     - access
     - name
     - resource
-    - resource_ids
+    - resource_names
     type: object
-  models.RoleBinding:
+  models.RoleGroup:
     properties:
-      created_at:
-        type: string
-      group_id:
-        type: string
       id:
         type: string
       name:
         type: string
-      role_id:
+      provider:
         type: string
-      updated_at:
-        type: string
-    required:
-    - name
     type: object
   models.Runner:
     properties:
@@ -235,10 +246,6 @@ definitions:
     properties:
       created_at:
         type: string
-      groups:
-        items:
-          type: string
-        type: array
       id:
         type: string
       password:
@@ -901,6 +908,129 @@ paths:
       summary: Update a group
       tags:
       - groups
+  /groups/{id}/roles:
+    delete:
+      consumes:
+      - application/json
+      description: Remove roles from group
+      parameters:
+      - description: Roles to be removed
+        in: body
+        name: group
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/models.GroupRole'
+          type: array
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+      security:
+      - Bearer: []
+      summary: Remove roles
+      tags:
+      - groups
+    get:
+      consumes:
+      - application/json
+      description: List all roles in given group
+      parameters:
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/models.GroupRole'
+              type: array
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+      security:
+      - Bearer: []
+      summary: List roles
+      tags:
+      - groups
+    post:
+      consumes:
+      - application/json
+      description: Add roles to group
+      parameters:
+      - description: Roles to be added
+        in: body
+        name: group
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/models.GroupRole'
+          type: array
+      - description: Group ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Group'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+      security:
+      - Bearer: []
+      summary: Add roles
+      tags:
+      - groups
   /groups/{id}/users:
     delete:
       consumes:
@@ -1107,45 +1237,6 @@ paths:
       summary: Get job info
       tags:
       - jobs
-    post:
-      consumes:
-      - application/json
-      description: Add a job to the cluster
-      parameters:
-      - description: Task  name
-        in: path
-        name: name
-        required: true
-        type: string
-      - description: Extra vars
-        in: body
-        name: evars
-        schema:
-          type: object
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.JobMessage'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-      security:
-      - Bearer: []
-      summary: Create a new job
-      tags:
-      - jobs
   /jobs/{name}/log:
     get:
       consumes:
@@ -1245,190 +1336,6 @@ paths:
       summary: Auth admin
       tags:
       - authenticate
-  /role_bindings:
-    get:
-      consumes:
-      - application/json
-      description: List all roles bindings available on the cluster
-      parameters:
-      - description: Maximum number of role bindings to return (default 100)
-        in: query
-        name: limit
-        type: integer
-      - description: Number of role bindings to skip (default 0)
-        in: query
-        name: offset
-        type: integer
-      - description: Filter by role binding name
-        in: query
-        name: name
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.RoleBinding'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-      security:
-      - Bearer: []
-      summary: List all role bindings
-      tags:
-      - rolebindings
-    post:
-      consumes:
-      - application/json
-      description: Add a role binding to the cluster
-      parameters:
-      - description: New role binding
-        in: body
-        name: roleBinding
-        required: true
-        schema:
-          $ref: '#/definitions/models.RoleBinding'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.RoleBinding'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-      security:
-      - Bearer: []
-      summary: Create a new role binding
-      tags:
-      - rolebindings
-  /role_bindings/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete by role binding ID
-      parameters:
-      - description: RoleBinding ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.ResponseMessage'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-      security:
-      - Bearer: []
-      summary: Delete a role binding
-      tags:
-      - rolebindings
-    get:
-      consumes:
-      - application/json
-      description: Get information about a specific role binding
-      parameters:
-      - description: RoleBinding ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.RoleBinding'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-      security:
-      - Bearer: []
-      summary: Get a role binding
-      tags:
-      - rolebindings
-    patch:
-      consumes:
-      - application/json
-      description: Update a role binding in the cluster
-      parameters:
-      - description: RoleBinding ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Update role
-        in: body
-        name: role
-        required: true
-        schema:
-          $ref: '#/definitions/models.RoleBinding'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.RoleBinding'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/helpers.HTTPError'
-      security:
-      - Bearer: []
-      summary: Update a role binding
-      tags:
-      - rolebindings
   /roles:
     get:
       consumes:
@@ -1615,6 +1522,43 @@ paths:
       security:
       - Bearer: []
       summary: Update a role
+      tags:
+      - roles
+  /roles/{id}/groups:
+    get:
+      consumes:
+      - application/json
+      description: Get groups linked to role
+      parameters:
+      - description: Role ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.RoleGroup'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+      security:
+      - Bearer: []
+      summary: Get role groups
       tags:
       - roles
   /runners:
@@ -2057,6 +2001,46 @@ paths:
       summary: Update a task
       tags:
       - tasks
+  /tasks/{name}/run:
+    post:
+      consumes:
+      - application/json
+      description: Run Task
+      parameters:
+      - description: Task  name
+        in: path
+        name: name
+        required: true
+        type: string
+      - description: Extra vars
+        in: body
+        name: evars
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.JobMessage'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+      security:
+      - Bearer: []
+      summary: Run Task
+      tags:
+      - tasks
   /tasks/{name}/schema:
     delete:
       consumes:
@@ -2279,7 +2263,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get groups memberships for a user
+      description: Get information about a specific user
       parameters:
       - description: User ID
         in: path
@@ -2292,9 +2276,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.UserGroup'
-            type: array
+            $ref: '#/definitions/models.User'
         "400":
           description: Bad Request
           schema:
@@ -2309,7 +2291,7 @@ paths:
             $ref: '#/definitions/helpers.HTTPError'
       security:
       - Bearer: []
-      summary: Get user groups
+      summary: Get a user
       tags:
       - users
     patch:
@@ -2350,6 +2332,43 @@ paths:
       security:
       - Bearer: []
       summary: Update a user
+      tags:
+      - users
+  /users/{id}/groups:
+    get:
+      consumes:
+      - application/json
+      description: Get groups memberships for a user
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.UserGroup'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.HTTPError'
+      security:
+      - Bearer: []
+      summary: Get user groups
       tags:
       - users
   /webhooks:
