# models/credentials.go
@@ -19,12 +19,12 @@ type Claims struct {
 }
 
 type Authorization struct {
-	Username   string    `json:"username"`
-	UserID     uuid.UUID `json:"user_id"`
-	Provider   string    `json:"provider"`
-	Resource   string    `json:"resource"`
-	ResourceID string    `json:"resource_id"`
-	Access     string    `json:"access"`
+	Username     string    `json:"username"`
+	UserID       uuid.UUID `json:"user_id"`
+	Provider     string    `json:"provider"`
+	Resource     string    `json:"resource"`
+	ResourceName string    `json:"resource_id"`
+	Access       string    `json:"access"`
 }
 
 type LoginToken struct {
